objects/Custom_Search__mdt.object
<CustomObject>
    <description>Defines various search parameters for any custom search created. (lightning component)</description>
    <fields>
        <fullName>Message_When_Value_Missing__c</fullName>
        <defaultValue>&quot;Please enter a search keyword&quot;</defaultValue>
        <label>Message When Value Missing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Max_Search_Results__c</fullName>
        <defaultValue>5000</defaultValue>
        <label>Number of Max Search Results</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Results_per_Page__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Number of Results per Page</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Results_Found_Message__c</fullName>
        <defaultValue>&quot;{0} cases found.&quot;</defaultValue>
        <label>Results Found Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Not_Found_Message__c</fullName>
        <defaultValue>&quot;No results found for search term: {0}&quot;</defaultValue>
        <label>Results Not Found Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Input_Placeholder__c</fullName>
        <defaultValue>&quot;Enter Machine Id or Location Name...&quot;</defaultValue>
        <label>Search Input Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Title__c</fullName>
        <defaultValue>&quot;Search Mario&quot;</defaultValue>
        <label>Search Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Search</label>
    <pluralLabel>Custom Searches</pluralLabel>
</CustomObject>